cabal-version:  2.2
name:           bootstrap-sample
version:        0.0.0.1
synopsis:       Synopsis
description:    Description.
category:       System
homepage:       https://github.com/haskell-nix/hnix#readme
bug-reports:    https://github.com/haskell-nix/hnix/issues
author:         Anton Latukha
maintainer:     anton@latukha.com
license:        MIT
license-file:   License
build-type:     Simple
data-dir:       data/
extra-source-files:
  ChangeLog.md
  ReadMe.md
  License

flag optimize
  description: Enable all optimization flags
  manual: True
  default: False

flag profiling
  description: Enable profiling
  manual: True
  default: False

common shared
  default-language: Haskell2010
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DeriveLift
    , FlexibleContexts
    , FlexibleInstances
    , ScopedTypeVariables
    , StandaloneDeriving
    , TypeApplications
    , TypeSynonymInstances
    , InstanceSigs
    , MultiParamTypeClasses
    , TupleSections
    , LambdaCase
    , BangPatterns
    , ViewPatterns
  build-depends:
      base >= 4.12 && < 4.16
    , relude  
  ghc-options:
    -Wall
    -fprint-potential-instances
  if flag(optimize)
    default-extensions:
      ApplicativeDo
    ghc-options:
      -O2
      -fexpose-all-unfoldings
      -fspecialise-aggressively

library
  exposed-modules:
    Nix
    Nix.Prelude
  other-modules:
    Paths_hnix
  autogen-modules:
    Paths_hnix
  hs-source-dirs:
    src

executable bootstrap-sample
  hs-source-dirs:
    main
  main-is: Main.hs
  other-modules:
    Repl
    Paths_hnix
  autogen-modules:
    Paths_hnix
  build-depends:
    , base
    , containers
    , relude

test-suite hnix-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    EvalTests
    NixLanguageTests
    ParserTests
    PrettyParseTests
    PrettyTests
    ReduceExprTests
    TestCommon
  hs-source-dirs:
    tests
  build-depends:
      Diff
    , Glob
    , base
    , containers
    , data-fix
    , directory
    , exceptions
    , filepath
    , hedgehog
    , hnix
    , megaparsec
    , neat-interpolation
    , optparse-applicative
    , pretty-show
    , prettyprinter
    , process
    , relude
    , split
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , tasty-th
    , serialise
    , template-haskell
    , time
    , unix-compat

benchmark hnix-benchmarks
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    ParserBench
  hs-source-dirs:
    benchmarks
  build-depends:
      base
    , criterion
    , data-fix
    , exceptions
    , filepath
    , hnix
    , optparse-applicative
    , relude
    , serialise
    , template-haskell
    , time
