cabal-version:  2.2
name:           bootstrap-sample
version:        0.0.0.1
synopsis:       Synopsis
description:    Description.
category:       System
homepage:       https://github.com/Anton-Latukha/haskell-bootstrap-sample#readme
bug-reports:    https://github.com/Anton-Latukha/haskell-bootstrap-sample/issues
author:         Anton Latukha
maintainer:     anton@latukha.com
license:        MIT
license-file:   License
build-type:     Simple
data-dir:       data/
extra-source-files:
  ChangeLog.md
  ReadMe.md
  License

flag optimize
  description: Enable all optimization flags
  manual: True
  default: False

flag profiling
  description: Enable profiling
  manual: True
  default: False

common shared
  default-language: Haskell2010
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DeriveLift
    , FlexibleContexts
    , FlexibleInstances
    , ScopedTypeVariables
    , StandaloneDeriving
    , TypeApplications
    , TypeSynonymInstances
    , InstanceSigs
    , MultiParamTypeClasses
    , TupleSections
    , LambdaCase
    , BangPatterns
    , ViewPatterns
  build-depends:
      base >= 4.12 && < 4.17
    , relude >= 1.0.0 && < 1.1.0
  ghc-options:
    -Wall
    -fprint-potential-instances
  if flag(optimize)
    default-extensions:
      ApplicativeDo
    ghc-options:
      -O2
      -fexpose-all-unfoldings
      -fspecialise-aggressively

library
  hs-source-dirs:
    library
  exposed-modules:
    Init
    Init.Prelude

executable bootstrap-sample
  hs-source-dirs:
    executable
  main-is: Main.hs

test-suite bootstrap-sample-tests
  hs-source-dirs:
    test-suite
  main-is: Main.hs
  other-modules:
    TestCommon
  build-depends:
      tasty
    , tasty-hedgehog
    , tasty-hunit
    , tasty-th

benchmark bootstrap-sample-benchmarks
  hs-source-dirs:
    benchmark
  main-is: Main.hs
  other-modules:
    ParserBench
